# cpp-homework

./: CIS 25 (Laney)_Scope of Work Document.docx  assignment3_p1.cpp  assignment3_p2.cpp  assignment5.cpp  assignment6.cpp  assignment7.cpp
final/: CMakeLists.txt  main.cpp  slideshow_link.txt  task.cpp  task.h  taskmanager.cpp  taskmanager.h  youtube_video_link.txt
midterm/: Midterm Project Report.docx  main.cpp  task.cpp  task.h  taskmanager.cpp  taskmanager.h
week1/: assignment4.cpp
week3/: assignment8.cpp
week4/assignment10/: main.cpp
week4/assignment11/: employee.cpp  employee.h  inventoryManager.cpp  inventoryManager.h  main.cpp  user.cpp  user.h
week5/: Kaggle Data Subset - Sheet1.csv  main.cpp  student.cpp  student.h
